--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
 # Local env files
 .env
 .env.local
@@ -5,14 +12,27 @@
 .env.test.local
 .env.production.local
 
-
-node_modules
-dist
-samconfig.toml
-.env*
-!.env.sample
-.aws-sam/*
+# Testing
 coverage
-test-report.xml
-.idea
+
+# Turbo
+.turbo
+
+# Vercel
+.vercel
+
+# Build Outputs
+.next/
+out/
+build
+dist
+
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Misc
 .DS_Store
+*.pem
