--- a/content-length-observer/package.json
+++ b/content-length-observer/package.json
@@ -39,17 +39,13 @@
     "@types/aws-lambda": "^8.10.130",
     "aws-lambda": "^1.0.7",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.19.9",
-    "esbuild-plugin-polyfill-node": "^0.3.0",
     "npm-run-all": "^4.1.5",
-    "parcel": "^2.10.3",
     "rollup": "^4.9.1",
-    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
-    "@middy/core": "^5.1.0",
-    "core-js-pure": "^3.34.0"
+    "@middy/core": "^5.1.0"
   }
 }
