--- a/large-response-handler-middleware/tsconfig.json
+++ b/large-response-handler-middleware/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "outDir": "lib",
-    "target": "es5",
+    "target": "ES2019",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": ["es2022", "dom"],
+    "lib": ["es2019"],
     "sourceMap": true,
     "strict": true,
     "strictFunctionTypes": true,
@@ -21,5 +21,5 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "lib", "**/*.test.ts"]
+  "exclude": ["node_modules", "lib", "**/*.test.ts", "**/__tests__/*"]
 }
