--- a/large-response-handler-middleware/package.json
+++ b/large-response-handler-middleware/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "content-length-observer",
+  "name": "large-response-handler-middleware",
   "version": "1.0.0",
-  "repository": "https://github.com/epilot-dev/aws-lambda-utility-middlewares",
+  "repository": "https://github.com/epilot-dev/aws-lambda-utility-middlewares/tree/main/large-response-handler-middleware",
   "license": "MIT",
   "contributors": [
     "João Pinho(https://github.com/jpinho)",
@@ -25,7 +25,10 @@
     "clean": "rm -rf lib",
     "build:declarations": "tsc -p tsconfig.json",
     "build:modules": "cross-env BABEL_ENV=bundled rollup -c rollup.config.js --bundleConfigAsCjs",
-    "build": "npm-run-all -l clean -p build:modules build:declarations"
+    "build": "npm-run-all -l clean -p build:modules build:declarations",
+    "setup-local": "./scripts/init-s3.sh",
+    "pre-test": "wait-on $AWS_ENDPOINT/health && npm run setup-local",
+    "test": "jest --verbose --detectOpenHandles --forceExit"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
@@ -37,8 +40,11 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/aws-lambda": "^8.10.130",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
     "aws-lambda": "^1.0.7",
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^4.9.1",
     "tslib": "^2.6.2",
@@ -46,6 +52,9 @@
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
-    "@middy/core": "^5.1.0"
+    "@middy/core": "^5.1.0",
+    "jest-junit": "^16.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2"
   }
 }
