--- a/large-response-handler-middleware/package.json
+++ b/large-response-handler-middleware/package.json
@@ -29,7 +29,8 @@
     "setup-local": "./scripts/init-s3.sh",
     "pre-test": "wait-on $AWS_ENDPOINT/health && npm run setup-local",
     "test": "jest --verbose --detectOpenHandles --forceExit",
-    "check-size": "size-limit"
+    "check-size": "size-limit",
+    "lint": "eslint --ext .ts"
   },
   "size-limit": [
     {
