--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "clean": "npm run clean --workspaces --if-present",
     "test": "npm run test --workspaces --if-present",
-    "build": "npm run build --workspaces --if-present"
+    "build": "npm run build --workspaces --if-present",
+    "lint": "npm run lint --workspaces --if-present"
   },
   "license": "MIT",
   "files": [
@@ -18,5 +19,15 @@
   ],
   "workspaces": [
     "large-response-handler-middleware"
-  ]
+  ],
+  "devDependencies": {
+    "@epilot/eslint-config": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.5.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^5.3.3"
+  }
 }
