--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "npm run clean --workspaces --if-present",
     "test": "npm run test --workspaces --if-present",
     "build": "npm run build --workspaces --if-present",
-    "lint": "npm run lint --workspaces --if-present"
+    "lint": "npm run lint --workspaces --if-present",
+    "prepublishOnly": "npm lint && npm run build"
   },
   "license": "MIT",
   "files": [
