--- a/packages/large-response-handler-middleware/package.json
+++ b/packages/large-response-handler-middleware/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "large-response-handler-middleware",
-  "version": "1.0.0",
+  "name": "@epilot/large-response-handler-middleware",
+  "version": "0.0.1",
   "repository": "https://github.com/epilot-dev/aws-lambda-utility-middlewares/tree/main/packages/large-response-handler-middleware",
   "license": "MIT",
   "contributors": [
