--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epilot/large-response-middleware",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -22,8 +22,8 @@
   },
   "files": [
     "lib/",
-    "README.md",
-    "LICENSE"
+    "docs/",
+    "README.md"
   ],
   "scripts": {
     "clean": "rm -rf lib",
