chore: update package

--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -22,7 +22,7 @@
   },
   "files": [
     "lib/",
-    "docs/",
+    "docs/out/Architecture - Sequence Diagram.svg",
     "README.md"
   ],
   "scripts": {
