--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epilot/large-response-middleware",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
   },
   "files": [
     "lib/",
-    "docs/out/Architecture - Sequence Diagram.svg",
+    "docs/out/",
     "README.md"
   ],
   "scripts": {
