--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epilot/large-response-middleware",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -19,7 +19,6 @@
   },
   "files": [
     "lib/",
-    "docs/out/",
     "README.md"
   ],
   "scripts": {
@@ -44,6 +43,8 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-typescript": "^7.23.3",
+    "@dazn/lambda-powertools-logger": "^1.28.1",
+    "@middy/core": "^2.5.7",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
@@ -53,6 +54,8 @@
     "@types/aws-lambda": "^8.10.130",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.816.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
@@ -66,10 +69,13 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
     "@middy/core": "^2.5.7",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.816.0"
+  },
+  "dependencies": {
+    "core-js": "^3.34.0"
   }
 }
