--- a/packages/large-response-middleware/tsconfig.json
+++ b/packages/large-response-middleware/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "outDir": "lib",
-    "target": "ES2019",
+    "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": ["es2019"],
+    "lib": ["ESNext"],
     "sourceMap": true,
     "strict": true,
     "strictFunctionTypes": true,
