chore: add LICENSE to files

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "license": "MIT",
   "files": [
-    "README.md"
+    "README.md",
+    "LICENSE.md"
   ],
   "workspaces": [
     "packages/*"
