--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -46,8 +46,8 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.23.3",
     "@dazn/lambda-powertools-logger": "^1.28.1",
     "@middy/core": "^2.5.7",
@@ -62,6 +62,7 @@
     "@types/node": "^20.10.5",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.816.0",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
@@ -82,6 +83,7 @@
     "aws-sdk": "^2.816.0"
   },
   "dependencies": {
-    "core-js": "^3.34.0"
+    "core-js": "^3.34.0",
+    "yn": "^5.0.0"
   }
 }
