--- a/packages/large-response-middleware/tsconfig.json
+++ b/packages/large-response-middleware/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "lib": ["ESNext"],
     "sourceMap": true,
+    "types": ["vitest/globals"],
     "strict": true,
     "strictFunctionTypes": true,
     "noImplicitReturns": true,
@@ -21,5 +22,5 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "lib", "**/*.test.ts", "**/__tests__/*"]
+  "exclude": ["node_modules", "lib", "src/__tests__", "src/**/*.test*"]
 }
