refactor: improve axios large response interceptor configuration
- Rename types and functions for clarity
- Add `enabled` option to conditionally apply interceptor
- Support custom large payload fetching strategy
- Update namespace and default options
- Enhance type safety and configuration flexibility

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "editor.defaultFormatter": "biomejs.biome",
   "editor.codeActionsOnSave": {
-    "source.organizeImports": "always"
+    "source.organizeImports": "always",
+    "source.fixAll": "always"
   },
   "[json]": {
     "editor.defaultFormatter": "biomejs.biome"
