--- a/packages/axios-large-response/package.json
+++ b/packages/axios-large-response/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epilot/axios-large-response",
-  "version": "0.0.1-rc.0",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.mjs",
