--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -40,6 +40,8 @@
     }
   ],
   "devDependencies": {
+    "@aws-sdk/client-s3": "3.782.0",
+    "@aws-sdk/s3-request-presigner": "3.782.0",
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
@@ -55,7 +57,6 @@
     "@types/aws-lambda": "^8.10.130",
     "@types/node": "^20.10.5",
     "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.816.0",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "rollup": "^4.9.1",
@@ -68,10 +69,11 @@
     "vitest": "3.0.5"
   },
   "peerDependencies": {
+    "@aws-sdk/client-s3": "^3.x",
+    "@aws-sdk/s3-request-presigner": "^3.x",
     "@dazn/lambda-powertools-logger": "^1.28.1",
     "@middy/core": "^2.5.7",
-    "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.816.0"
+    "aws-lambda": "^1.0.7"
   },
   "dependencies": {
     "core-js": "^3.34.0",
