chore: bump package version to 1.0.0-rc.1

--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epilot/large-response-middleware",
-  "version": "0.0.15",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "repository": {
     "type": "git",
