--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -47,7 +47,7 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.23.3",
     "@dazn/lambda-powertools-logger": "^1.28.1",
-    "@middy/core": "^2.5.7",
+    "@middy/core": "^3.6.2",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
@@ -56,7 +56,6 @@
     "@size-limit/file": "^11.0.1",
     "@types/aws-lambda": "^8.10.130",
     "@types/node": "^20.10.5",
-    "aws-lambda": "^1.0.7",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "rollup": "^4.9.1",
@@ -72,8 +71,7 @@
     "@aws-sdk/client-s3": "^3.x",
     "@aws-sdk/s3-request-presigner": "^3.x",
     "@dazn/lambda-powertools-logger": "^1.28.1",
-    "@middy/core": "^2.5.7",
-    "aws-lambda": "^1.0.7"
+    "@middy/core": ">=2.x"
   },
   "dependencies": {
     "core-js": "^3.34.0",
