--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epilot/large-response-middleware",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.2",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -31,7 +31,11 @@
     "check-size": "size-limit",
     "lint": "biome check --write .",
     "prepublishOnly": "pnpm lint && pnpm build",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "bump:prerelease": "npm version prerelease --preid rc --no-git-tag-version",
+    "bump:patch": "npm version patch --no-git-tag-version",
+    "bump:minor": "npm version minor --no-git-tag-version",
+    "bump:major": "npm version major --no-git-tag-version"
   },
   "size-limit": [
     {
