chore: release version 1.0.0 for large-response-middleware

--- a/packages/large-response-middleware/package.json
+++ b/packages/large-response-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epilot/large-response-middleware",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
